[package]
name = "cidr"
version = "0.1.0"
authors = ["Daniel YU <leptonyu@gmail.com>"]
description = "IP network and IP host within network types"
edition = "2018"
homepage = "https://github.com/leptonyu/rust-cidr"
repository = "https://github.com/leptonyu/rust-cidr"
keywords = ["cidr", "network"]
readme = "README.md"
license = "MIT"

[dependencies]
regex = "1.4.3"
lazy_static = "1.4.0"
md5="0.7"

[dev-dependencies]
clap = "3.0.0-beta.2"
quickcheck = "1.0.3"
quickcheck_macros ="1"
actix-web = "3"