[package]
name = "cidr"
version = "0.1.1"
authors = ["Daniel Yu <leptonyu@gmail.com>"]
description = "IP network and IP host within network types"
edition = "2018"
homepage = "https://github.com/leptonyu/rust-cidr"
repository = "https://github.com/leptonyu/rust-cidr"
keywords = ["cidr", "network"]
readme = "README.md"
license = "MIT"

[dependencies]
regex = "1"
lazy_static = "1"
md5="0.7"

[dev-dependencies]
salak = "0.2"
quickcheck = "1"
quickcheck_macros ="1"
