[package]
authors = ["Daniel Yu <leptonyu@gmail.com>"]
description = "IP network and IP host within network types"
edition = "2018"
homepage = "https://github.com/leptonyu/rust-cidr"
keywords = ["cidr", "network"]
license = "MIT"
name = "cidr"
readme = "README.md"
repository = "https://github.com/leptonyu/rust-cidr"
version = "0.1.1"

[dependencies]
lazy_static = "1"
md5 = "0.7"
regex = "1"

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
salak = {version = "0.10", features = ["args"]}
